@@ -1,37 +1,40 @@
 /*
-*   Copyright 2016 jshook
-*   Licensed under the Apache License, Version 2.0 (the "License");
-*   you may not use this file except in compliance with the License.
-*   You may obtain a copy of the License at
-*
-*       http://www.apache.org/licenses/LICENSE-2.0
-*
-*   Unless required by applicable law or agreed to in writing, software
-*   distributed under the License is distributed on an "AS IS" BASIS,
-*   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-*   See the License for the specific language governing permissions and
-*   limitations under the License.
-*/
+ *   Copyright 2016 jshook
+ *   Licensed under the Apache License, Version 2.0 (the "License");
+ *   you may not use this file except in compliance with the License.
+ *   You may obtain a copy of the License at
+ *
+ *       http://www.apache.org/licenses/LICENSE-2.0
+ *
+ *   Unless required by applicable law or agreed to in writing, software
+ *   distributed under the License is distributed on an "AS IS" BASIS,
+ *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *   See the License for the specific language governing permissions and
+ *   limitations under the License.
+ */
 package io.nosqlbench.engine.core.script;
 
 import ch.qos.logback.classic.Logger;
 import com.codahale.metrics.MetricRegistry;
-import io.nosqlbench.engine.core.ProgressIndicator;
-import io.nosqlbench.engine.core.ScenarioController;
-import io.nosqlbench.engine.core.ScenarioLogger;
-import io.nosqlbench.engine.core.ScenarioResult;
+import com.oracle.truffle.js.scriptengine.GraalJSScriptEngine;
+import io.nosqlbench.engine.core.*;
+import io.nosqlbench.engine.core.metrics.PolyglotMetricRegistryBindings;
 import io.nosqlbench.nb.api.errors.BasicError;
 import io.nosqlbench.engine.api.extensions.ScriptingPluginInfo;
 import io.nosqlbench.engine.api.metrics.ActivityMetrics;
-import io.nosqlbench.engine.core.metrics.MetricRegistryBindings;
+import io.nosqlbench.engine.core.metrics.NashornMetricRegistryBindings;
 import io.nosqlbench.engine.api.scripting.ScriptEnvBuffer;
+import jdk.nashorn.api.scripting.NashornScriptEngineFactory;
+import org.graalvm.polyglot.Context;
+import org.graalvm.polyglot.EnvironmentAccess;
+import org.graalvm.polyglot.HostAccess;
+import org.graalvm.polyglot.PolyglotAccess;
 import org.slf4j.LoggerFactory;
 
 import javax.script.*;
 import java.io.IOException;
 import java.nio.ByteBuffer;
 import java.nio.charset.Charset;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -45,25 +48,35 @@ import java.util.stream.Collectors;
 public class Scenario implements Callable<ScenarioResult> {
 
     private static final Logger logger = (Logger) LoggerFactory.getLogger(Scenario.class);
+
     private static final ScriptEngineManager engineManager = new ScriptEngineManager();
     private final List<String> scripts = new ArrayList<>();
     private ScriptEngine scriptEngine;
     private ScenarioController scenarioController;
     private ProgressIndicator progressIndicator;
     private String progressInterval = "console:1m";
+    private boolean wantsGraaljsCompatMode;
     private ScenarioContext scriptEnv;
     private String name;
     private ScenarioLogger scenarioLogger;
     private ScriptParams scenarioScriptParams;
-    private boolean areChartsEnabled;
+    private Engine engine = Engine.Graalvm;
 
-    public Scenario(String name, String progressInterval) {
-        this.name = name;
-        this.progressInterval = progressInterval;
+    public enum Engine {
+        Nashorn,
+        Graalvm
     }
 
-    public Scenario(String name) {
+    public Scenario(String name, Engine engine, String progressInterval, boolean wantsGraaljsCompatMode) {
         this.name = name;
+        this.engine = engine;
+        this.progressInterval = progressInterval;
+        this.wantsGraaljsCompatMode = wantsGraaljsCompatMode;
+    }
+
+    public Scenario(String name, Engine engine) {
+        this.name = name;
+        this.engine = engine;
     }
 
     public Scenario addScriptText(String scriptText) {
@@ -91,36 +104,89 @@ public class Scenario implements Callable<ScenarioResult> {
 
     private void init() {
 
+        logger.info("Using engine " + engine.toString());
+
         MetricRegistry metricRegistry = ActivityMetrics.getMetricRegistry();
 
-        scriptEngine = engineManager.getEngineByName("nashorn");
-        scriptEnv = new ScenarioContext(scenarioController);
-        scriptEngine.setContext(scriptEnv);
-        scenarioController = new ScenarioController();
-        if (!progressInterval.equals("disabled")) {
-            progressIndicator = new ProgressIndicator(scenarioController,progressInterval);
+        switch (engine) {
+            case Nashorn:
+                NashornScriptEngineFactory f = new NashornScriptEngineFactory();
+                this.scriptEngine = f.getScriptEngine("--language=es6");
+
+                // engineManager.getEngineByName("nashorn");
+                // TODO: Figure out how to do this in engine bindings: --language=es-6
+                break;
+            case Graalvm:
+                Context.Builder contextSettings = Context.newBuilder("js")
+                    .allowHostAccess(HostAccess.ALL)
+                    .allowNativeAccess(true)
+                    .allowCreateThread(true)
+                    .allowIO(true)
+                    .allowHostClassLookup(s -> true)
+                    .allowHostClassLoading(true)
+                    .allowCreateProcess(true)
+                    .allowAllAccess(true)
+                    .allowEnvironmentAccess(EnvironmentAccess.INHERIT)
+                    .allowPolyglotAccess(PolyglotAccess.ALL)
+                    .option("js.ecmascript-version", "2020")
+                    .option("js.nashorn-compat", "true");
+
+                this.scriptEngine = GraalJSScriptEngine.create(null, contextSettings);
+
+//                try {
+//                    this.scriptEngine.put("javaObj", new Object());
+//                    this.scriptEngine.eval("(javaObj instanceof Java.type('java.lang.Object'));");
+//                } catch (ScriptException e) {
+//                    throw new RuntimeException(e);
+//                }
+
+                break;
         }
 
-        scriptEngine.put("params", scenarioScriptParams);
-        scriptEngine.put("scenario", scenarioController);
-        scriptEngine.put("activities", new ActivityBindings(scenarioController));
-        scriptEngine.put("metrics", new MetricRegistryBindings(metricRegistry));
+        scenarioController = new ScenarioController();
+        if (!progressInterval.equals("disabled")) {
+            progressIndicator = new ProgressIndicator(scenarioController, progressInterval);
+        }
 
-        for (ScriptingPluginInfo extensionDescriptor : SandboxExtensionFinder.findAll()) {
+        scriptEnv = new ScenarioContext(scenarioController);
+        scriptEngine.setContext(scriptEnv);
+
+        scriptEngine.put("params", scenarioScriptParams);
+
+        if (engine == Engine.Graalvm) {
+            // https://github.com/graalvm/graaljs/blob/master/docs/user/JavaInterop.md
+            if (wantsGraaljsCompatMode) {
+                scriptEngine.put("scenario", scenarioController);
+                scriptEngine.put("metrics", new NashornMetricRegistryBindings(metricRegistry));
+                scriptEngine.put("activities", new NashornActivityBindings(scenarioController));
+            } else {
+                scriptEngine.put("scenario", new PolyglotScenarioController(scenarioController));
+                scriptEngine.put("metrics", new PolyglotMetricRegistryBindings(metricRegistry));
+                scriptEngine.put("activities", new NashornActivityBindings(scenarioController));
+            }
+        } else if (engine == Engine.Nashorn) {
+            scriptEngine.put("scenario", scenarioController);
+            scriptEngine.put("metrics", new NashornMetricRegistryBindings(metricRegistry));
+            scriptEngine.put("activities", new NashornActivityBindings(scenarioController));
+        } else {
+            throw new RuntimeException("Unsupported engine: " + engine);
+        }
+
+        for (ScriptingPluginInfo<?> extensionDescriptor : SandboxExtensionFinder.findAll()) {
             if (!extensionDescriptor.isAutoLoading()) {
                 logger.info("Not loading " + extensionDescriptor + ", autoloading is false");
                 continue;
             }
 
             org.slf4j.Logger extensionLogger =
-                    LoggerFactory.getLogger("extensions." + extensionDescriptor.getBaseVariableName());
+                LoggerFactory.getLogger("extensions." + extensionDescriptor.getBaseVariableName());
             Object extensionObject = extensionDescriptor.getExtensionObject(
-                    extensionLogger,
-                    metricRegistry,
-                    scriptEnv
+                extensionLogger,
+                metricRegistry,
+                scriptEnv
             );
             logger.debug("Adding extension object:  name=" + extensionDescriptor.getBaseVariableName() +
-                    " class=" + extensionObject.getClass().getSimpleName());
+                " class=" + extensionObject.getClass().getSimpleName());
             scriptEngine.put(extensionDescriptor.getBaseVariableName(), extensionObject);
         }
 
@@ -130,17 +196,25 @@ public class Scenario implements Callable<ScenarioResult> {
     public void run() {
         init();
 
-        logger.info("Running control script for " + getName() + ".");
+        logger.debug("Running control script for " + getName() + ".");
         for (String script : scripts) {
             try {
                 Object result = null;
                 if (scriptEngine instanceof Compilable) {
-                    logger.info("Using direct script compilation");
+                    logger.debug("Using direct script compilation");
                     Compilable compilableEngine = (Compilable) scriptEngine;
                     CompiledScript compiled = compilableEngine.compile(script);
+                    logger.debug("-> invoking main scenario script (compiled)");
                     result = compiled.eval();
+                    logger.debug("<- scenario completed (compiled)");
                 } else {
+                    logger.debug("-> invoking main scenario script (interpreted)");
                     result = scriptEngine.eval(script);
+                    logger.debug("<- scenario completed (interpreted)");
+                }
+
+                if (result != null) {
+                    logger.debug("scenario result: type(" + result.getClass().getCanonicalName() + "): value:" + result.toString());
                 }
                 System.err.flush();
                 System.out.flush();
@@ -148,7 +222,7 @@ public class Scenario implements Callable<ScenarioResult> {
                 String diagname = "diag_" + System.currentTimeMillis() + ".js";
                 try {
                     Path diagFilePath = Paths.get(scenarioLogger.getLogDir(), diagname);
-                    Files.write(diagFilePath,script.getBytes(StandardCharsets.UTF_8));
+                    Files.writeString(diagFilePath, script);
                 } catch (Exception ignored) {
                 }
                 String errorDesc = "Script error while running scenario:" + e.toString() + ", script content is at " + diagname;
@@ -165,12 +239,15 @@ public class Scenario implements Callable<ScenarioResult> {
                 logger.error(errorDesc, o);
                 scenarioController.forceStopScenario(5000);
                 throw new RuntimeException("Non-Script error while running scenario:" + o.getMessage(), o);
+            } finally {
+                System.out.flush();
+                System.err.flush();
             }
         }
-        int awaitCompletionTime = 86400*365*1000;
-        logger.info("Awaiting completion of scenario for " + awaitCompletionTime + " millis.");
+        int awaitCompletionTime = 86400 * 365 * 1000;
+        logger.debug("Awaiting completion of scenario for " + awaitCompletionTime + " millis.");
         scenarioController.awaitCompletion(awaitCompletionTime);
-
+        logger.debug("scenario completed without errors");
     }
 
     public ScenarioResult call() {
@@ -219,8 +296,11 @@ public class Scenario implements Callable<ScenarioResult> {
     public void addScenarioScriptParams(ScriptParams scenarioScriptParams) {
         this.scenarioScriptParams = scenarioScriptParams;
     }
-    public void addScenarioScriptParams(Map<String,String> scriptParams) {
-        addScenarioScriptParams(new ScriptParams() {{ putAll(scriptParams);}});
+
+    public void addScenarioScriptParams(Map<String, String> scriptParams) {
+        addScenarioScriptParams(new ScriptParams() {{
+            putAll(scriptParams);
+        }});
     }
 
     public void enableCharting() {
